# jobxx

./: CMakeLists.txt  CMakeSettings.json  README.md
include/jobxx/: concurrent_queue.h  context.h  delegate.h  job.h  park.h  predicate.h  queue.h  spinlock.h  task.h
include/jobxx/_detail/: concurrent_queue.h  job.h  job_impl.h  queue.h  queue_impl.h  task.h
source/: context.cc  job.cc  park.cc  queue.cc  task.cc  tests.cc
